--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,10 @@ jobs:
           current_version: ${{ steps.last-release.outputs.tag-name }}
           level: minor
         
-
+      - name: Create ${{ steps.bump-semver.outputs.new_version }} tag
+        run: |
+          git tag -a ${{ steps.bump-semver.outputs.new_version }} -m "create new version ${{ steps.bump-semver.outputs.new_version }}"
+          git push origin ${{ steps.bump-semver.outputs.new_version }}
 
   release:
     runs-on: ubuntu-latest
