--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,9 +65,7 @@ jobs:
               tag_name: '${{ needs.deploy.outputs.new_release_tag }}',
               previous_tag_name: '${{ needs.deploy.outputs.last_release_tag }}'
             })
-            console.log("response from generate-notes=")
-            console.log(response)
-            return response
+            return response.data.body
 
       - name: Create new ${{ needs.deploy.outputs.new_release_tag }} release
         uses: actions/github-script@v6
